# pyproj-layout

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
example/: cli.py  example_module.py
