# 定义项目信息[metadata]
[metadata]
name = example
version = attr: example.__version__
author = You
author_email = your@email.address
url = ''
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:

# include_package_data = True # default is False

# [options.package_data]
# example = data/schema.json, *.txt
# * = README.md


# install_requires =
#     pandas == 1.4.1
#     PyYAML >= 6.0
#     typer

# [options.extras_require
# notebook = jupyter>=1.0.0, matplotlib
# dev = 
#     black==22.1.0
#     flake8==4.0.1
#  pip install -e ".[dev]" or pip install "example-0.1.0-py3-none-any.whl[dev,notebook]"

[options.entry_points]
console_scripts = 
    my-example-utility = example.example_module:main

# [options.entry_points]
# console_scripts = 
#     example-tool = example.cli:app